fixes gap

--- a/src/scss/components/_card-grid.scss
+++ b/src/scss/components/_card-grid.scss
@@ -1,5 +1,5 @@
 .card-grid {
-  $gap: $gap-xs;
+  $gap: $gap-base;
 
   width: 100%;
 
